--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link href="css/bootstrap-paper.css" rel="stylesheet">
     <script src="lib/angular.js"></script>
+    <script src="app.js"></script>
     <script src="controllers/AdoptionsController.js"></script>
     <script src="controllers/AnimalsController.js"></script>
     <script src="services/AnimalsFactory.js"></script>
@@ -14,17 +15,24 @@
       <div class="row" ng-controller="AnimalsCtrl">
         <div class="col-md-6">
           <h1>Animal Intake</h1>
-          <form class="form-inline">
+          <form class="form-inline" ng-submit="AnimalsFactory.addAnimal()">
             <div class="form-group">
               <label for="name" class="sr-only">Name</label>
               <input type="text" ng-model="AnimalsFactory.animalName" class="form-control" placeholder="Enter Animal Name">
             </div>
             <div class="form-group">
               <label for="type" class="sr-only">Type</label>
-              <input type="text" ng-model="AnimalsFactory.animalName" class="form-control" placeholder="Enter Animal Type">
+              <input type="text" ng-model="AnimalsFactory.animalType" class="form-control" placeholder="Enter Animal Type">
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
+        </div>
+        <div class="col-md-6">
+          <h1>In Shelter</h1 ng-show="animals.length && filtered.length">
+          <h1>No Matches</h1 ng-show="animals.length && !filtered.length">
+          <ul ng-repeat="item in filtered = (animals | filter:query)">
+            <li>{{item.name}}, {{item.type}}</li>
+          </ul>
         </div>
       </div>
 
