--- a/index.html
+++ b/index.html
@@ -27,9 +27,18 @@
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
         </div>
+        <div class="row">
+          <h2>Search for an Animal</h2>
+          <form class="form-inline" role="form">
+            <div class="form-group">
+              <input type="text" ng-model="query" placeholder="Search Here" class="form-control">
+            </div>
+          </form>
+        </div>
+
         <div class="col-md-6">
-          <h1>In Shelter</h1 ng-show="animals.length && filtered.length">
-          <h1>No Matches</h1 ng-show="animals.length && !filtered.length">
+          <h1 ng-show="animals.length && filtered.length">In Shelter</h1>
+          <h1 ng-show="animals.length && !filtered.length">No Matches</h1>
           <ul ng-repeat="item in filtered = (animals | filter:query)">
             <li>{{item.name}}, {{item.type}}</li>
           </ul>
