--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
         </div>
-        <div class="row">
+
+        <div class="col-md-6">
           <h2>Search for an Animal</h2>
           <form class="form-inline" role="form">
             <div class="form-group">
@@ -36,12 +37,25 @@
           </form>
         </div>
 
-        <div class="col-md-6">
-          <h1 ng-show="animals.length && filtered.length">In Shelter</h1>
-          <h1 ng-show="animals.length && !filtered.length">No Matches</h1>
-          <ul ng-repeat="item in filtered = (animals | filter:query)">
-            <li>{{item.name}}, {{item.type}}</li>
-          </ul>
+      </div>
+
+        <div class="row">
+
+          <div class="col-md-6">
+            <h1 ng-show="animals.length && filtered.length">In Shelter</h1>
+            <h1 ng-show="animals.length && !filtered.length">No Matches</h1>
+            <ul ng-repeat="item in filtered = (animals | filter:query)">
+              <li>{{item.name}}, {{item.type}}</li>
+            </ul>
+          </div>
+
+          <div class="col-md-6">
+            <h1 ng-show="animalsAdopted.length">Adopted</h1>
+            <ul ng-repeat="item in animalsAdopted = (animals | filter:{adopted: true})">
+              <li>{{item.name}}, {{item.type}}</li>
+            </ul>
+          </div>
+
         </div>
       </div>
 
